-----------------------------------------

- wxCreateGreyedImage() deprecated, use wxImage::ConvertToGreyscale() instead.
- wxString::GetWriteBuf() and UngetWriteBuf() deprecated, using wxStringBuffer
  or wxStringBufferLength instead.
- wxDIRCTRL_SHOW_FILTERS style is deprecated, filters are alwsys shown if
  specified so this style should simply be removed


Major new features in this release
----------------------------------


2.9.0
-----

All:

- Added wxJoin() and wxSplit() functions (Francesco Montorsi)
- Added wxMutex::LockTimeout() (Aleksandr Napylov)
- Added wxMemoryInputStream(wxInputStream&) ctor (Stas Sergeev)
- Implemented wxMemoryInputStream::CanRead()
- Added wxEXEC_BLOCK flag (Hank Schultz)
- Add support for wxStream-derived classes to wxRTTI (Stas Sergeev)
- Added wxStreamBuffer::Truncate() (Stas Sergeev)
- Allow using  wxEventLoop in console applications (Lukasz Michalski)

All (GUI):

- Added wxH[V]ScrolledWindow (Brad Anderson, Bryan Petty)
- Added wxDC::StretchBlit() for wxMac and wxMSW (Vince Harron)
- Added support for drop down toolbar buttons (Tim Kosse)
- Added support for labels for toolbar controls (Vince Harron)
- Added wxMessageDialog::SetMessage() and SetExtendedMessage()
- Added wxEventBlocker class (Francesco Montorsi).
- Added wxFile/DirPickerCtrl::Get/SetFile/DirName() (Francesco Montorsi).
- Added wxSizerFlags::Top() and Bottom().
- Slovak translation added.
- Fixed tab-related drawing and hit-testing bugs in wxRichTextCtrl.
- Implemented background colour in wxRichTextCtrl.
- Fixed crashes in helpview when opening a file.
- Set locale to the default in all ports, not just wxGTK
- Added wxJoystick::GetButtonState/Position() (Frank C Szczerba)
- Added wxGridUpdateLocker helper class (Evgeniy Tarassov)
- Support wxGRID_AUTOSIZE in wxGrid::SetRow/ColLabelSize() (Evgeniy Tarassov)
- Added wxWindow::NavigateIn() in addition to existing Navigate()
- Add support for <data> tags to wxrc